--- a/app/src/main/res/layout/activity_registration.xml
+++ b/app/src/main/res/layout/activity_registration.xml
@@ -5,14 +5,21 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
+    android:background="@android:color/holo_blue_light"
     android:padding="4dp"
     tools:context=".ProfileActivity">
 
+
+    <ImageView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:srcCompat="@drawable/logo" />
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:padding="4dp"
+        android:textColor="@color/white"
         android:text="Thank You for Choosing Gamer Connect!"
         />
 
@@ -24,6 +31,7 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:textColor="@color/white"
             android:text="First Name: " />
 
         <EditText
@@ -41,6 +49,7 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:textColor="@color/white"
             android:text="Last Name: " />
 
         <EditText
@@ -58,6 +67,7 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:textColor="@color/white"
             android:text="Username: " />
 
         <EditText
@@ -75,6 +85,7 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:textColor="@color/white"
             android:text="Password: " />
 
         <EditText
@@ -92,15 +103,11 @@
         >
 
         <Button
-<<<<<<< HEAD
             android:id="@+id/activityRegistrationCreateAccountButton"
-=======
->>>>>>> 3868dd6d72487aedd6f74dd94839bef9e95af067
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:text="Create Account"
             />
-
 
     </LinearLayout>
 
