--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -41,7 +41,7 @@
             android:text="Email: " />
 
         <EditText
-            android:id="@+id/user_Email"
+            android:id="@+id/userEmail"
             android:layout_width="180dp"
             android:layout_height="wrap_content"
             android:layout_marginRight="8dp" />
@@ -58,7 +58,7 @@
             android:text="Password: " />
 
         <EditText
-            android:id="@+id/user_Password"
+            android:id="@+id/userPassword"
             android:layout_width="180dp"
             android:layout_height="wrap_content"
             android:layout_marginRight="8dp"
@@ -79,10 +79,10 @@
         >
 
         <Button
+            android:id="@+id/loginBtn"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:text="Login"
-            />
+            android:text="Login" />
 
 
         <Button
