--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -42,9 +42,10 @@
 
         <EditText
             android:id="@+id/userEmail"
-            android:layout_width="180dp"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginRight="8dp" />
+            android:layout_marginRight="8dp"
+            android:hint="JhonAdams@example.com" />
     </LinearLayout>
 
     <LinearLayout
