--- a/app/src/main/res/layout/activity_dashboard_screen.xml
+++ b/app/src/main/res/layout/activity_dashboard_screen.xml
@@ -17,5 +17,5 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/WIP_pic" />
+        app:srcCompat="@drawable/wip_pic" />
 </androidx.constraintlayout.widget.ConstraintLayout>
