--- a/app/src/main/res/layout/activity_registration.xml
+++ b/app/src/main/res/layout/activity_registration.xml
@@ -25,7 +25,17 @@
         android:textColorHint="#FFFFFF"
         android:textColor="#FFFFFF"
         android:singleLine="true"
-        android:inputType="textEmailAddress"
+        android:layout_gravity="center"
+        android:layout_marginBottom="10dp"/>
+
+    <EditText
+        android:id="@+id/createUserName"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:hint="User Name"
+        android:textColorHint="#FFFFFF"
+        android:textColor="#FFFFFF"
+        android:singleLine="true"
         android:layout_gravity="center"
         android:layout_marginBottom="10dp"/>
 
