--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -75,13 +75,14 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:text="Login"
+            android:id="@+id/login_button"
             />
 
         <Button
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:text="Create Account"
-            android:id="@+id/createButton"
+            android:id="@+id/create_button"
             />
 
     </LinearLayout>
