--- a/app/src/main/res/layout/activity_registration.xml
+++ b/app/src/main/res/layout/activity_registration.xml
@@ -58,10 +58,27 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Username: " />
+            android:text="Email: " />
 
         <EditText
             android:id="@+id/user_Email"
+            android:layout_width="180dp"
+            android:layout_height="wrap_content"
+            android:layout_marginRight="8dp" />
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal">
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Username: " />
+
+        <EditText
+            android:id="@+id/user_Username"
             android:layout_width="180dp"
             android:layout_height="wrap_content"
             android:layout_marginRight="8dp" />
@@ -92,15 +109,11 @@
         >
 
         <Button
-<<<<<<< HEAD
             android:id="@+id/activityRegistrationCreateAccountButton"
-=======
->>>>>>> 3868dd6d72487aedd6f74dd94839bef9e95af067
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:text="Create Account"
             />
-
 
     </LinearLayout>
 
