--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,14 +4,21 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@android:color/holo_blue_light"
     android:orientation="vertical"
     android:padding="4dp"
     tools:context=".ProfileActivity">
+
+    <ImageView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:srcCompat="@drawable/logo" />
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:padding="4dp"
+        android:textColor="@color/white"
         android:text="Welcome to Gamer Connect! Please Login!"
         />
 
@@ -19,6 +26,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:padding="7dp"
+        android:textColor="@color/white"
         android:text="Don't Have an Account? Click on 'Create Account'! "
         />
 
@@ -31,37 +39,44 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:textColor="@color/white"
             android:text="Email: " />
 
         <EditText
             android:id="@+id/user_Email"
             android:layout_width="180dp"
-            android:layout_height="wrap_content"
-            android:layout_marginRight="8dp" />
+            android:layout_height="48dp"
+            android:layout_marginRight="8dp"
+            android:background="@android:drawable/dialog_holo_light_frame"/>
     </LinearLayout>
 
     <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:labelFor="@id/user_Email"
         android:orientation="horizontal">
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:textColor="@color/white"
             android:text="Password: " />
 
         <EditText
             android:id="@+id/user_Password"
             android:layout_width="180dp"
-            android:layout_height="wrap_content"
+            android:layout_height="48dp"
             android:layout_marginRight="8dp"
-            android:inputType="textPassword"/>
+            android:inputType="textPassword"
+            android:background="@android:drawable/dialog_holo_light_frame"/>
 
         <Button
             android:id="@+id/showHideBtn"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Show"/>
+            android:labelFor="@id/user_Password"
+            android:text="Show"
+            android:background="@android:drawable/dialog_holo_light_frame"/>
     </LinearLayout>
 
     <LinearLayout
@@ -76,6 +91,7 @@
             android:layout_height="match_parent"
             android:text="Login"
             android:id="@+id/login_button"
+            android:background="@android:drawable/dialog_holo_light_frame"
             />
 
         <Button
@@ -83,6 +99,7 @@
             android:layout_height="match_parent"
             android:text="Create Account"
             android:id="@+id/create_button"
+            android:background="@android:drawable/dialog_holo_light_frame"
             />
 
     </LinearLayout>
