--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -4,10 +4,11 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
     android:background="@android:color/holo_blue_light"
-    android:padding="10dp"
-    tools:context=".ProfileActivity">
+    android:orientation="vertical"
+    android:padding="4dp"
+    tools:context=".ProfileActivity"
+    >
 
 
     <ImageView
@@ -21,7 +22,6 @@
         android:padding="4dp"
         android:textColor="@color/white"
         android:text="Welcome to Gamer Connect!"
-        android:layout_gravity="left"
         />
 
     <TextView
@@ -33,44 +33,54 @@
         />
 
     <LinearLayout
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:orientation="vertical"
-        android:gravity="center"
-        android:paddingEnd="40dp">
+        android:orientation="horizontal">
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textColor="@color/white"
+            android:text="Email: " />
 
         <EditText
             android:id="@+id/userEmail"
-            android:layout_width="match_parent"
+            android:layout_width="180dp"
             android:layout_height="48dp"
-            android:hint="Email"
-            android:textColorHint="#ffffffff"
-            android:textColor="#ffffffff"
-            android:singleLine="true"
-            android:inputType="textEmailAddress"
-            android:layout_gravity="center"
-            android:layout_marginBottom="10dp"/>
+            android:layout_marginRight="8dp"
+            android:background="@android:drawable/dialog_holo_light_frame"
+            />
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:labelFor="@id/userEmail"
+        android:orientation="horizontal">
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textColor="@color/white"
+            android:text="Password: " />
 
         <EditText
-            android:id="@+id/userPassword"
-            android:layout_width="match_parent"
+            android:id="@+id/user_Password"
+            android:layout_width="180dp"
             android:layout_height="48dp"
-            android:hint="Password"
-            android:textColorHint="#ffffffff"
-            android:textColor="#ffffffff"
-            android:singleLine="true"
-            android:layout_gravity="center"
-            android:inputType="textPassword" />
+            android:layout_marginRight="8dp"
+            android:inputType="textPassword"
+            android:background="@android:drawable/dialog_holo_light_frame"/>
 
         <Button
             android:id="@+id/showHideBtn"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Show"
             android:background="@android:drawable/dialog_holo_light_frame"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:text="Show password"
-            android:layout_gravity="center"/>
+            android:labelFor="@id/user_Password"
+            />
     </LinearLayout>
-
 
     <LinearLayout
         android:layout_width="wrap_content"
@@ -80,19 +90,19 @@
         >
 
         <Button
-            android:id="@+id/loginBtn"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:background="@android:drawable/dialog_holo_light_frame"
-            android:text="Login" />
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:text="Login"
+        android:id="@+id/login_button"
+        android:background="@android:drawable/dialog_holo_light_frame" />
 
 
         <Button
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:text="Create Account"
-            android:background="@android:drawable/dialog_holo_light_frame"
             android:id="@+id/createButton"
+            android:background="@android:drawable/dialog_holo_light_frame"
             />
 
     </LinearLayout>
