--- a/app/src/main/res/layout/activity_registration.xml
+++ b/app/src/main/res/layout/activity_registration.xml
@@ -6,21 +6,27 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     tools:context=".RegistrationActivity"
-    android:background="#3F474C"
-    android:padding="10dp"
+    android:background="@android:color/holo_blue_light"
+    android:padding="4dp"
     android:gravity="center" >
+
+    <ImageView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:srcCompat="@drawable/logo"
+        />
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:padding="7dp"
-        android:textColor="#FFFFFF"
+        android:padding="4dp"
+        android:textColor="@color/white"
         android:text="Create your Gamer Connect Account" />
 
     <EditText
         android:id="@+id/createName"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="48dp"
         android:hint="Full Name"
         android:textColorHint="#FFFFFF"
         android:textColor="#FFFFFF"
@@ -31,7 +37,7 @@
     <EditText
         android:id="@+id/createUserName"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="48dp"
         android:hint="User Name"
         android:textColorHint="#FFFFFF"
         android:textColor="#FFFFFF"
@@ -43,7 +49,7 @@
     <EditText
         android:id="@+id/createEmail"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="48dp"
         android:hint="Email"
         android:textColorHint="#FFFFFF"
         android:textColor="#FFFFFF"
@@ -55,7 +61,7 @@
     <EditText
         android:id="@+id/createPassword"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="48dp"
         android:hint="Password"
         android:textColorHint="#FFFFFF"
         android:textColor="#FFFFFF"
@@ -67,7 +73,7 @@
     <EditText
         android:id="@+id/createPasswordCheck"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="48dp"
         android:hint="Confirm Password"
         android:textColorHint="#FFFFFF"
         android:textColor="#FFFFFF"
