--- a/app/src/main/res/layout/account_create_admin.xml
+++ b/app/src/main/res/layout/account_create_admin.xml
@@ -5,92 +5,66 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    android:padding="4dp"
+    android:background="@android:color/holo_blue_light"
+    android:padding="10dp"
     tools:context=".ProfileActivity">
 
-    <LinearLayout
+    <ImageView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:orientation="horizontal">
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="First Name: " />
-
-        <EditText
-            android:id="@+id/admin_First_Name"
-            android:layout_width="180dp"
-            android:layout_height="wrap_content"
-            android:layout_marginRight="8dp" />
-    </LinearLayout>
+        app:srcCompat="@drawable/logo" />
 
     <LinearLayout
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="horizontal">
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Last Name: " />
+        android:orientation="vertical"
+        android:gravity="center"
+        android:paddingEnd="40dp">
 
         <EditText
-            android:id="@+id/admin_Last_Name"
-            android:layout_width="180dp"
+            android:id="@+id/admin_first_name"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginRight="8dp" />
-    </LinearLayout>
-
-    <LinearLayout
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal">
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Email: " />
+            android:hint="First Name"
+            android:textColorHint="#ffffffff"
+            android:textColor="#ffffffff"
+            android:singleLine="true"
+            android:layout_gravity="center"
+            android:layout_marginBottom="10dp"/>
 
         <EditText
-            android:id="@+id/admin_Email"
-            android:layout_width="180dp"
+            android:id="@+id/admin_last_name"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginRight="8dp" />
-    </LinearLayout>
-
-    <LinearLayout
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal">
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Username: " />
+            android:hint="Last Name"
+            android:textColorHint="#ffffffff"
+            android:textColor="#ffffffff"
+            android:singleLine="true"
+            android:layout_gravity="center"
+            android:layout_marginBottom="10dp"/>
 
         <EditText
-            android:id="@+id/user_Email"
-            android:layout_width="180dp"
+            android:id="@+id/admin_email"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginRight="8dp" />
-    </LinearLayout>
-
-    <LinearLayout
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal">
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Password: " />
+            android:hint="Email"
+            android:textColorHint="#ffffffff"
+            android:textColor="#ffffffff"
+            android:singleLine="true"
+            android:layout_gravity="center"
+            android:layout_marginBottom="10dp"/>
 
         <EditText
-            android:id="@+id/admin_Password"
-            android:layout_width="180dp"
+            android:id="@+id/adminPassword"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginRight="8dp" />
+            android:hint="Password"
+            android:textColorHint="#ffffffff"
+            android:textColor="#ffffffff"
+            android:singleLine="true"
+            android:layout_gravity="center"
+            android:layout_marginBottom="10dp"/>
+
     </LinearLayout>
 
     <LinearLayout
