--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,64 +5,73 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    android:padding="4dp"
+    android:background="@android:color/holo_blue_light"
+    android:padding="10dp"
     tools:context=".ProfileActivity">
+
+
+    <ImageView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:srcCompat="@drawable/logo" />
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:padding="4dp"
-        android:text="Welcome to Gamer Connect! Please Login!"
+        android:textColor="@color/white"
+        android:text="Welcome to Gamer Connect!"
+        android:layout_gravity="center"
         />
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:padding="7dp"
+        android:textColor="@color/white"
         android:text="Don't Have an Account? Click on 'Create Account'! "
+        android:layout_gravity="center"
         />
 
-
     <LinearLayout
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="horizontal">
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Email: " />
+        android:orientation="vertical"
+        android:gravity="center"
+        android:paddingEnd="40dp">
 
         <EditText
-            android:id="@+id/user_Email"
-            android:layout_width="180dp"
+            android:id="@+id/userEmail"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginRight="8dp" />
-    </LinearLayout>
-
-    <LinearLayout
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal">
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Password: " />
+            android:hint="Email"
+            android:textColorHint="#ffffffff"
+            android:textColor="#ffffffff"
+            android:singleLine="true"
+            android:inputType="textEmailAddress"
+            android:layout_gravity="center"
+            android:layout_marginBottom="10dp"/>
 
         <EditText
-            android:id="@+id/user_Password"
-            android:layout_width="180dp"
+            android:id="@+id/userPassword"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginRight="8dp"
-            android:inputType="textPassword"/>
+            android:hint="Password"
+            android:textColorHint="#ffffffff"
+            android:textColor="#ffffffff"
+            android:singleLine="true"
+            android:layout_gravity="center"
+            android:inputType="textPassword" />
 
         <Button
             android:id="@+id/showHideBtn"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Show"/>
+            android:text="Show password"
+            android:textSize="10dp"
+            android:layout_gravity="left"/>
     </LinearLayout>
+
 
     <LinearLayout
         android:layout_width="wrap_content"
@@ -72,17 +81,17 @@
         >
 
         <Button
+            android:id="@+id/loginBtn"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:text="Login"
-            android:id="@+id/login_button"
-            />
+            android:text="Login" />
+
 
         <Button
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:text="Create Account"
-            android:id="@+id/create_button"
+            android:id="@+id/createButton"
             />
 
     </LinearLayout>
