--- a/app/src/main/res/layout/account_create_admin.xml
+++ b/app/src/main/res/layout/account_create_admin.xml
@@ -60,6 +60,7 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:labelFor="@id/admin_Password"
             android:text="Email: " />
 
         <EditText
@@ -105,14 +106,14 @@
             android:layout_width="180dp"
             android:layout_height="48dp"
             android:layout_marginRight="8dp"
-            android:background="@android:drawable/dialog_holo_light_frame"/>
+            android:background="@android:drawable/dialog_holo_light_frame"
+            />
     </LinearLayout>
 
     <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="vertical"
-        android:labelFor="@id/admin_Password"
         android:layout_gravity="center"
         >
 
@@ -120,9 +121,7 @@
             android:id="@+id/activityRegistrationCreateAccountButton"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:labelFor="@id/activityRegistrationCreateAccountButton"
             android:text="Create Account"
-
             />
 
 
