--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -8,8 +8,8 @@
     android:orientation="vertical"
     android:padding="4dp"
     tools:context=".ProfileActivity"
+    tools:ignore="contentDescription"
     >
-
 
     <ImageView
         android:layout_width="wrap_content"
@@ -22,7 +22,7 @@
         android:padding="4dp"
         android:textColor="@color/white"
         android:text="Welcome to Gamer Connect!"
-        />
+        tools:ignore="HardcodedText" />
 
     <TextView
         android:layout_width="wrap_content"
@@ -30,7 +30,7 @@
         android:padding="7dp"
         android:textColor="@color/white"
         android:text="Don't Have an Account? Click on 'Create Account'! "
-        />
+        tools:ignore="HardcodedText" />
 
     <LinearLayout
         android:layout_width="wrap_content"
@@ -41,13 +41,14 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textColor="@color/white"
-            android:text="Email: " />
+            android:text="Email: "
+            tools:ignore="HardcodedText" />
 
         <EditText
             android:id="@+id/userEmail"
             android:layout_width="180dp"
             android:layout_height="48dp"
-            android:layout_marginRight="8dp"
+            android:layout_marginEnd="8dp"
             android:background="@android:drawable/dialog_holo_light_frame"
             />
     </LinearLayout>
@@ -62,15 +63,18 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textColor="@color/white"
-            android:text="Password: " />
+            android:text="Password: "
+            tools:ignore="HardcodedText" />
 
         <EditText
             android:id="@+id/user_Password"
             android:layout_width="180dp"
             android:layout_height="48dp"
-            android:layout_marginRight="8dp"
+            app:passwordToggleEnabled="true"
+            android:layout_marginEnd="8dp"
             android:inputType="textPassword"
-            android:background="@android:drawable/dialog_holo_light_frame"/>
+            android:background="@android:drawable/dialog_holo_light_frame"
+            />
 
         <Button
             android:id="@+id/showHideBtn"
@@ -78,8 +82,7 @@
             android:layout_height="wrap_content"
             android:text="Show"
             android:background="@android:drawable/dialog_holo_light_frame"
-            android:labelFor="@id/user_Password"
-            />
+            tools:ignore="HardcodedText" />
     </LinearLayout>
 
     <LinearLayout
@@ -90,11 +93,12 @@
         >
 
         <Button
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="Login"
-        android:id="@+id/login_button"
-        android:background="@android:drawable/dialog_holo_light_frame" />
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:text="Login"
+            android:id="@+id/login_button"
+            android:background="@android:drawable/dialog_holo_light_frame"
+            tools:ignore="HardcodedText" />
 
 
         <Button
@@ -103,7 +107,7 @@
             android:text="Create Account"
             android:id="@+id/createButton"
             android:background="@android:drawable/dialog_holo_light_frame"
-            />
+            tools:ignore="HardcodedText" />
 
     </LinearLayout>
 
