--- a/app/src/main/res/menu/sidebar.xml
+++ b/app/src/main/res/menu/sidebar.xml
@@ -8,9 +8,9 @@
         <item android:id="@+id/contact"
             android:icon="@drawable/ic_baseline_home_24"
             android:title="Contact"/>
-        <item android:id="@+id/gallery"
-            android:icon="@drawable/ic_baseline_home_24"
-            android:title="Gallery"/>
+        <item android:id="@+id/game_options"
+            android:icon="@drawable/ic_baseline_videogame_asset_24"
+            android:title="Games"/>
     </group>
 
     <item android:title="Profile">
@@ -22,6 +22,9 @@
                 <item android:id="@+id/login"
                     android:icon="@drawable/ic_baseline_login_24"
                     android:title="Log In"/>
+                <item android:id="@+id/log_out"
+                    android:icon="@drawable/ic_baseline_laptop_mac_24"
+                    android:title="Log Out"/>
             </group>
         </menu>
     </item>
