--- a/app/src/main/res/layout/activity_page_home.xml
+++ b/app/src/main/res/layout/activity_page_home.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:id="@+id/drawer_layout"
+    android:id="@+id/drawerLayout"
     android:background="@android:color/holo_blue_light"
     >
 
@@ -19,6 +19,8 @@
         app:headerLayout="@layout/header"
         app:menu="@menu/sidebar"
         android:id="@+id/nav_view"
+        android:layout_gravity="start"
+        android:fitsSystemWindows="true"
         />
 
 </androidx.drawerlayout.widget.DrawerLayout>
