--- a/app/src/main/res/layout/header.xml
+++ b/app/src/main/res/layout/header.xml
@@ -10,7 +10,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Your Name"
-        android:textColor="black"
+        android:textColor="#FF000000"
         android:textSize="30dp"
         android:textStyle="bold"
         />
@@ -18,7 +18,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Gamer Connect"
-        android:textColor="black"
+        android:textColor="#FF000000"
         android:textSize="30dp"
         />
 
