--- a/app/src/main/res/layout/activity_registration.xml
+++ b/app/src/main/res/layout/activity_registration.xml
@@ -7,24 +7,19 @@
     android:orientation="vertical"
     tools:context=".RegistrationActivity"
     android:background="@android:color/holo_blue_light"
-    android:padding="4dp"
+    android:padding="10dp"
     android:gravity="center" >
-
-    <ImageView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        app:srcCompat="@drawable/logo"
-        />
 
     <ScrollView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"/>
 
+
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:padding="4dp"
-        android:textColor="@color/white"
+        android:padding="7dp"
+        android:textColor="#FFFFFF"
         android:text="Create your Gamer Connect Account" />
 
     <TextView
@@ -39,7 +34,7 @@
     <EditText
         android:id="@+id/createName"
         android:layout_width="match_parent"
-        android:layout_height="48dp"
+        android:layout_height="wrap_content"
         android:hint="Full Name"
         android:textColorHint="#FFFFFF"
         android:textColor="#FFFFFF"
@@ -58,7 +53,7 @@
     <EditText
         android:id="@+id/createUserName"
         android:layout_width="match_parent"
-        android:layout_height="48dp"
+        android:layout_height="wrap_content"
         android:hint="User Name"
         android:textColorHint="#FFFFFF"
         android:textColor="#FFFFFF"
@@ -78,7 +73,7 @@
     <EditText
         android:id="@+id/createEmail"
         android:layout_width="match_parent"
-        android:layout_height="48dp"
+        android:layout_height="wrap_content"
         android:hint="Email"
         android:textColorHint="#FFFFFF"
         android:textColor="#FFFFFF"
@@ -98,7 +93,7 @@
     <EditText
         android:id="@+id/createPassword"
         android:layout_width="match_parent"
-        android:layout_height="48dp"
+        android:layout_height="wrap_content"
         android:hint="Password"
         android:textColorHint="#FFFFFF"
         android:textColor="#FFFFFF"
@@ -118,7 +113,7 @@
     <EditText
         android:id="@+id/createPasswordCheck"
         android:layout_width="match_parent"
-        android:layout_height="48dp"
+        android:layout_height="wrap_content"
         android:hint="Confirm Password"
         android:textColorHint="#FFFFFF"
         android:textColor="#FFFFFF"
@@ -132,7 +127,6 @@
         android:layout_height="wrap_content"
         android:gravity="center"
         android:text="Create Account"
-        android:background="@android:drawable/dialog_holo_light_frame"
         android:id="@+id/createAccount" />
 
 
