--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -4,12 +4,10 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@android:color/holo_blue_light"
     android:orientation="vertical"
-    android:padding="4dp"
-    tools:context=".ProfileActivity"
-    tools:ignore="contentDescription"
-    >
+    android:background="@android:color/holo_blue_light"
+    android:padding="10dp"
+    tools:context=".ProfileActivity">
 
     <ImageView
         android:layout_width="wrap_content"
@@ -22,68 +20,55 @@
         android:padding="4dp"
         android:textColor="@color/white"
         android:text="Welcome to Gamer Connect!"
-        tools:ignore="HardcodedText" />
+        android:layout_gravity="center"
+        />
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:padding="7dp"
-        android:textColor="@color/white"
         android:text="Don't Have an Account? Click on 'Create Account'! "
-        tools:ignore="HardcodedText" />
+        />
 
     <LinearLayout
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="horizontal">
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textColor="@color/white"
-            android:text="Email: "
-            tools:ignore="HardcodedText" />
+        android:orientation="vertical"
+        android:gravity="center"
+        android:paddingEnd="40dp">
 
         <EditText
             android:id="@+id/userEmail"
-            android:layout_width="180dp"
-            android:layout_height="48dp"
-            android:layout_marginEnd="8dp"
-            android:background="@android:drawable/dialog_holo_light_frame"
-            />
-    </LinearLayout>
-
-    <LinearLayout
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:labelFor="@id/userEmail"
-        android:orientation="horizontal">
-
-        <TextView
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:textColor="@color/white"
-            android:text="Password: "
-            tools:ignore="HardcodedText" />
+            android:hint="Email"
+            android:textColorHint="#ffffffff"
+            android:textColor="#ffffffff"
+            android:singleLine="true"
+            android:inputType="textEmailAddress"
+            android:layout_gravity="center"
+            android:layout_marginBottom="10dp"/>
 
         <EditText
-            android:id="@+id/user_Password"
-            android:layout_width="180dp"
-            android:layout_height="48dp"
-            app:passwordToggleEnabled="true"
-            android:layout_marginEnd="8dp"
-            android:inputType="textPassword"
-            android:background="@android:drawable/dialog_holo_light_frame"
-            />
+            android:id="@+id/userPassword"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:hint="Password"
+            android:textColorHint="#ffffffff"
+            android:textColor="#ffffffff"
+            android:singleLine="true"
+            android:layout_gravity="center"
+            android:inputType="textPassword" />
 
         <Button
             android:id="@+id/showHideBtn"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Show"
-            android:background="@android:drawable/dialog_holo_light_frame"
-            tools:ignore="HardcodedText" />
+            android:text="Show password"
+            android:textSize="10dp"
+            android:layout_gravity="left"/>
     </LinearLayout>
+
 
     <LinearLayout
         android:layout_width="wrap_content"
@@ -93,12 +78,10 @@
         >
 
         <Button
+            android:id="@+id/loginBtn"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:text="Login"
-            android:id="@+id/login_button"
-            android:background="@android:drawable/dialog_holo_light_frame"
-            tools:ignore="HardcodedText" />
+            android:text="Login" />
 
 
         <Button
@@ -106,8 +89,7 @@
             android:layout_height="match_parent"
             android:text="Create Account"
             android:id="@+id/createButton"
-            android:background="@android:drawable/dialog_holo_light_frame"
-            tools:ignore="HardcodedText" />
+            />
 
     </LinearLayout>
 
