--- a/app/src/main/res/menu/sidebar.xml
+++ b/app/src/main/res/menu/sidebar.xml
@@ -1,28 +1,30 @@
 <?xml version="1.0" encoding="utf-8"?>
-<menu xmlns:android="http://schemas.android.com/apk/res/android">
+<menu xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
+    tools:showIn="navigation_view">
 
-        <item android:id="@+id/home"
-            android:icon="@drawable/ic_baseline_home_24"
-            android:title="Home"/>
-        <item android:id="@+id/contact"
-            android:icon="@drawable/ic_baseline_home_24"
-            android:title="Contact"/>
-        <item android:id="@+id/game_options"
-            android:icon="@drawable/ic_baseline_videogame_asset_24"
-            android:title="Games"/>
+    <item android:id="@+id/home"
+        android:icon="@drawable/ic_baseline_home_24"
+        android:title="Home"/>
+    <item android:id="@+id/contact"
+        android:icon="@drawable/ic_baseline_home_24"
+        android:title="Contact"/>
+    <item android:id="@+id/game_options"
+        android:icon="@drawable/ic_baseline_videogame_asset_24"
+        android:title="Games"/>
 
     <item android:title="Profile">
         <menu>
 
-                <item android:id="@+id/about"
-                    android:icon="@drawable/ic_baseline_account_circle_24"
-                    android:title="About"/>
-                <item android:id="@+id/login"
-                    android:icon="@drawable/ic_baseline_login_24"
-                    android:title="Log In"/>
-                <item android:id="@+id/log_out"
-                    android:icon="@drawable/ic_baseline_laptop_mac_24"
-                    android:title="Log Out"/>
+            <item android:id="@+id/about"
+                android:icon="@drawable/ic_baseline_account_circle_24"
+                android:title="About"/>
+            <item android:id="@+id/login"
+                android:icon="@drawable/ic_baseline_login_24"
+                android:title="Log In"/>
+            <item android:id="@+id/log_out"
+                android:icon="@drawable/ic_baseline_laptop_mac_24"
+                android:title="Log Out"/>
 
         </menu>
     </item>
@@ -30,12 +32,12 @@
     <item android:title="Communication">
         <menu>
 
-                <item android:id="@+id/share"
-                    android:icon="@drawable/ic_baseline_share_24"
-                    android:title="Share"/>
-                <item android:id="@+id/rate_us"
-                    android:icon="@drawable/ic_baseline_sentiment_satisfied_alt_24"
-                    android:title="Rate Us"/>
+            <item android:id="@+id/share"
+                android:icon="@drawable/ic_baseline_share_24"
+                android:title="Share"/>
+            <item android:id="@+id/rate_us"
+                android:icon="@drawable/ic_baseline_sentiment_satisfied_alt_24"
+                android:title="Rate Us"/>
 
         </menu>
     </item>
